--- a/css/style.css
+++ b/css/style.css
@@ -1607,6 +1607,11 @@ label {
   font-size: 50px;
   padding: 10px;
 }
+.contact_text  span a {
+  color: hsl(42, 93%, 51%);
+  display: inline-block;
+
+}
 .contact_text h5 {
   color: hsl(0, 0%, 100%);
   display: inline-block;
@@ -1615,6 +1620,11 @@ label {
   margin: 0;
   padding: 10px 30px 5px;
   width: 384px;
+}
+.contact_text h5 a{
+  color: hsl(0, 0%, 100%);
+  display: inline-block;
+ text-decoration: underline;
 }
 
 .contact_text p {
