--- a/css/style.css
+++ b/css/style.css
@@ -1939,10 +1939,10 @@ footer .footer_bottom {
 .services_img { text-align: center; width: 100% }
 .services_img_n img {  margin-left: auto; margin-right: auto; display: block;  width: 49%;}
 .services_img_n{  display: none}
-.services_detail {  margin: 0 0 30px;  text-align: center;
-}.services_detail li {  padding: 50px 0 0px;margin: 0 auto;}
+.services_detail {  margin: 0 0 30px;  text-align: center;}
+.services_detail li { padding: 50px 0 0px;margin: 0 auto;}
 .services_detail span {  float: none;}
-.services_detail h5 {  float: none;padding: 10px 20px 5px; display: block;}
+.services_detail h5 {  width: 100%; float: none;padding: 10px 20px 5px; display: block;}
 .services_detail p {  float: none;  width: 100%;}
 .how_it_work_m {  margin-top: 15px;  text-align: center;}
 .how_it_work_m.text-right h5::before {  display: none;}
