change background of delve section

--- a/css/style.css
+++ b/css/style.css
@@ -1219,7 +1219,7 @@ section.top_banner_bg:after {
 
 
 section.our_service_bg {
-  background: url(../images/c2c/Header_Background.webp) no-repeat fixed 0 0 / cover;
+  background: url(../images/c2c/Background.jpg) no-repeat fixed 0 0 / cover;
   position:relative;
 }
 
