--- a/css/style.css
+++ b/css/style.css
@@ -957,7 +957,7 @@ ul.breadcrumbs_m {
 /*------ app layers-------*/
 
 section.top_banner_bg {
-  background: url("../images/min/PossibleBackground2.jpg") no-repeat fixed 0 0 / cover ;
+  background: url("../images/min/PossibleBackground2.jpg") no-repeat fixed 0 -250px / cover ;
   padding-bottom: 0;
   position: relative;
 }
