--- a/css/style.css
+++ b/css/style.css
@@ -1122,7 +1122,7 @@ section.top_banner_bg:after {
 }
 
 .features_detail {
-  margin-top: 100px;
+  margin: 0;
 }
 
 
@@ -1161,14 +1161,14 @@ section.top_banner_bg:after {
 .services_img {
   float: left;
   padding: 0px 10px 0 0;
-  margin-top: 12%;
+  margin: 0;
 }
 .services_img_n img {  max-width: 310px; float: left;}
 
 .services_detail span {
-  border: 2px solid hsl(42, 93%, 51%);
+  border: 2px solid #019ef2;
   border-radius: 100%;
-  color: hsl(42, 93%, 51%);
+  color: #019ef2;
   display: inline-block;
   float: left;
   font-size: 30px;
@@ -1975,7 +1975,7 @@ footer .footer_bottom {
 .present_img {  margin: 0 auto;  text-align: center;}
 .section_heading h2 {  font-size: 35px; line-height:50px;}
 .section_heading h4 {  font-size: 20px;  line-height: 30px;}
-.features_detail {  margin-top: 30px;}
+.features_detail {  margin: 0;}
 .features_detail li {  border-right: none;  text-align: center;  width: 100%;}
 .features_img {  text-align: center;width: 100%;}
 .services_img { text-align: center; width: 100% }
@@ -2166,7 +2166,7 @@ section.coming_soon_bg {  padding: 60px 0 200px;}
 section {  padding: 60px 0;}
 .section_heading h2 {  font-size: 40px;}
 .section_heading h4 {  font-size: 26px;  line-height: 40px;}
-.features_detail {  margin-top: 30px;}
+.features_detail {  margin: 0;}
 .features_detail li {  border-right: none;  text-align: center;  width: 100%;}
 .features_img {  text-align: center;}
 .features_detail li:nth-child(2n) {  text-align: center;}
@@ -2242,7 +2242,7 @@ article {  margin: 0 0 70px;}
 .section_btn .btn.btn-default {  margin: 30px 5px 0;}
 .features_detail h5 {  font-size: 22px;}
 .features_img {  padding-top: 30px;}
-.features_detail {  margin-top: 70px;}
+.features_detail {  margin: 0;}
 .services_img {  float: left; margin-top: 15%;width: 49%;}
 .services_img_n img{  float: left;  width: 49%;}
 .services_detail span {  padding: 23px 24px;}
